// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addRoutes(routes) - adds routes to routesMap 1`] = `
Object {
  "location": Object {
    "basename": "",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/",
        "search": "",
        "state": Object {},
        "url": "/",
      },
    ],
    "hasSSR": false,
    "hash": "",
    "index": 0,
    "kind": "load",
    "length": 1,
    "params": Object {},
    "pathname": "/",
    "prev": Object {
      "basename": "",
      "entries": Array [],
      "hasSSR": false,
      "hash": "",
      "index": -1,
      "kind": "",
      "length": 0,
      "params": Object {},
      "pathname": "",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "type": "",
      "url": "",
    },
    "query": Object {},
    "routesAdded": 2,
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 404,
    "type": "@@rudy/NOT_FOUND",
    "url": "/",
  },
  "title": "@@rudy/ADD_ROUTES",
}
`;

exports[`back/next/jump 1`] = `
Object {
  "location": Object {
    "basename": "",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {
          "foo": "bar",
        },
        "url": "/first",
      },
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/third",
        "search": "",
        "state": Object {},
        "url": "/third",
      },
    ],
    "hasSSR": false,
    "hash": "",
    "index": 0,
    "kind": "back",
    "length": 2,
    "params": Object {},
    "pathname": "/first",
    "prev": Object {
      "basename": "",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "state": Object {},
          "url": "/first",
        },
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/third",
          "search": "",
          "state": Object {},
          "url": "/third",
        },
      ],
      "hasSSR": false,
      "hash": "",
      "index": 1,
      "kind": "push",
      "length": 2,
      "params": Object {},
      "pathname": "/third",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "THIRD",
      "url": "/third",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {
      "foo": "bar",
    },
    "status": 200,
    "type": "FIRST",
    "url": "/first",
  },
  "title": "FIRST",
}
`;

exports[`back/next/jump 2`] = `
Object {
  "location": Object {
    "basename": "",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {
          "foo": "bar",
        },
        "url": "/first",
      },
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/third",
        "search": "",
        "state": Object {
          "baz": "bla",
        },
        "url": "/third",
      },
    ],
    "hasSSR": false,
    "hash": "",
    "index": 1,
    "kind": "next",
    "length": 2,
    "params": Object {},
    "pathname": "/third",
    "prev": Object {
      "basename": "",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "state": Object {
            "foo": "bar",
          },
          "url": "/first",
        },
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/third",
          "search": "",
          "state": Object {},
          "url": "/third",
        },
      ],
      "hasSSR": false,
      "hash": "",
      "index": 0,
      "kind": "back",
      "length": 2,
      "params": Object {},
      "pathname": "/first",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {
        "foo": "bar",
      },
      "status": 200,
      "type": "FIRST",
      "url": "/first",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {
      "baz": "bla",
    },
    "status": 200,
    "type": "THIRD",
    "url": "/third",
  },
  "title": "THIRD",
}
`;

exports[`back/next/jump 3`] = `
Object {
  "location": Object {
    "basename": "",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {
          "foo": "bar",
          "uno": 1,
        },
        "url": "/first",
      },
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/third",
        "search": "",
        "state": Object {
          "baz": "bla",
        },
        "url": "/third",
      },
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/second/yo",
        "search": "",
        "state": Object {},
        "url": "/second/yo",
      },
    ],
    "hasSSR": false,
    "hash": "",
    "index": 0,
    "kind": "back",
    "length": 3,
    "params": Object {},
    "pathname": "/first",
    "prev": Object {
      "basename": "",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "state": Object {
            "foo": "bar",
          },
          "url": "/first",
        },
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/third",
          "search": "",
          "state": Object {
            "baz": "bla",
          },
          "url": "/third",
        },
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/second/yo",
          "search": "",
          "state": Object {},
          "url": "/second/yo",
        },
      ],
      "hasSSR": false,
      "hash": "",
      "index": 1,
      "kind": "push",
      "length": 3,
      "params": Object {},
      "pathname": "/second/yo",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {
        "baz": "bla",
      },
      "status": 200,
      "type": "THIRD",
      "url": "/second/yo",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {
      "foo": "bar",
      "uno": 1,
    },
    "status": 200,
    "type": "FIRST",
    "url": "/first",
  },
  "title": "FIRST",
}
`;

exports[`back/next/jump 4`] = `
Object {
  "location": Object {
    "basename": "",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {
          "foo": "bar",
          "uno": 1,
        },
        "url": "/first",
      },
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/third",
        "search": "",
        "state": Object {
          "baz": "bla",
        },
        "url": "/third",
      },
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/second/yo",
        "search": "",
        "state": Object {
          "dos": 2,
        },
        "url": "/second/yo",
      },
    ],
    "hasSSR": false,
    "hash": "",
    "index": 2,
    "kind": "next",
    "length": 3,
    "params": Object {
      "param": "yo",
    },
    "pathname": "/second/yo",
    "prev": Object {
      "basename": "",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "state": Object {
            "foo": "bar",
            "uno": 1,
          },
          "url": "/first",
        },
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/third",
          "search": "",
          "state": Object {
            "baz": "bla",
          },
          "url": "/third",
        },
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/second/yo",
          "search": "",
          "state": Object {},
          "url": "/second/yo",
        },
      ],
      "hasSSR": false,
      "hash": "",
      "index": 1,
      "kind": "back",
      "length": 3,
      "params": Object {},
      "pathname": "/first",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {
        "baz": "bla",
      },
      "status": 200,
      "type": "THIRD",
      "url": "/first",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {
      "dos": 2,
    },
    "status": 200,
    "type": "SECOND",
    "url": "/second/yo",
  },
  "title": "SECOND",
}
`;

exports[`back/next/jump 5`] = `
Object {
  "location": Object {
    "basename": "",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {
          "foo": "bar",
          "uno": 4,
        },
        "url": "/first",
      },
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/third",
        "search": "",
        "state": Object {
          "baz": "bla",
        },
        "url": "/third",
      },
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/second/yo",
        "search": "",
        "state": Object {
          "dos": 2,
        },
        "url": "/second/yo",
      },
    ],
    "hasSSR": false,
    "hash": "",
    "index": 0,
    "kind": "back",
    "length": 3,
    "params": Object {},
    "pathname": "/first",
    "prev": Object {
      "basename": "",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "state": Object {
            "foo": "bar",
            "uno": 1,
          },
          "url": "/first",
        },
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/third",
          "search": "",
          "state": Object {
            "baz": "bla",
          },
          "url": "/third",
        },
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/second/yo",
          "search": "",
          "state": Object {
            "dos": 2,
          },
          "url": "/second/yo",
        },
      ],
      "hasSSR": false,
      "hash": "",
      "index": 1,
      "kind": "next",
      "length": 3,
      "params": Object {},
      "pathname": "/second/yo",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {
        "baz": "bla",
      },
      "status": 200,
      "type": "THIRD",
      "url": "/second/yo",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {
      "foo": "bar",
      "uno": 4,
    },
    "status": 200,
    "type": "FIRST",
    "url": "/first",
  },
  "title": "FIRST",
}
`;

exports[`reset 1`] = `
Object {
  "location": Object {
    "basename": "",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/second/foo",
        "search": "",
        "state": undefined,
        "url": "/second/foo",
      },
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": undefined,
        "url": "/first",
      },
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/third",
        "search": "",
        "state": undefined,
        "url": "/third",
      },
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": undefined,
        "url": "/first",
      },
    ],
    "hasSSR": false,
    "hash": "",
    "index": 3,
    "kind": "next",
    "length": 4,
    "params": Object {},
    "pathname": "/first",
    "prev": Object {
      "basename": "",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/second/foo",
          "search": "",
          "state": undefined,
          "url": "/second/foo",
        },
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "state": undefined,
          "url": "/first",
        },
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/third",
          "search": "",
          "state": undefined,
          "url": "/third",
        },
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "state": undefined,
          "url": "/first",
        },
      ],
      "hasSSR": false,
      "hash": "",
      "index": 2,
      "kind": "load",
      "length": 4,
      "params": Object {},
      "pathname": "/first",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "THIRD",
      "url": "/first",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "FIRST",
    "url": "/first",
  },
  "title": "FIRST",
}
`;

exports[`setState 1`] = `
Object {
  "location": Object {
    "basename": "",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {
          "foo": "bar",
        },
        "url": "/first",
      },
    ],
    "hasSSR": false,
    "hash": "",
    "index": 0,
    "kind": "load",
    "length": 1,
    "params": Object {},
    "pathname": "/first",
    "prev": Object {
      "basename": "",
      "entries": Array [],
      "hasSSR": false,
      "hash": "",
      "index": -1,
      "kind": "",
      "length": 0,
      "params": Object {},
      "pathname": "",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "type": "",
      "url": "",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {
      "foo": "bar",
    },
    "status": 200,
    "type": "FIRST",
    "url": "/first",
  },
  "title": "FIRST",
}
`;

exports[`setState for another route 1`] = `
Object {
  "location": Object {
    "basename": "",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {
          "foo": "bar",
        },
        "url": "/first",
      },
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/third",
        "search": "",
        "state": Object {},
        "url": "/third",
      },
    ],
    "hasSSR": false,
    "hash": "",
    "index": 1,
    "kind": "push",
    "length": 2,
    "params": Object {},
    "pathname": "/third",
    "prev": Object {
      "basename": "",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "state": Object {},
          "url": "/first",
        },
      ],
      "hasSSR": false,
      "hash": "",
      "index": 0,
      "kind": "load",
      "length": 1,
      "params": Object {},
      "pathname": "/first",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "FIRST",
      "url": "/first",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "THIRD",
    "url": "/third",
  },
  "title": "THIRD",
}
`;
